...
  @override
  Widget build(BuildContext context, WidgetRef ref) {
    ref.watch(runtimeConfigProvider);

    return ShareIntentHandler(
      child: MaterialApp.router(
        title: 'Portraitor',
        theme: portraitorTheme,
        routerConfig: router,
        debugShowCheckedModeBanner: false,
      ),
    );
  }
...
